--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -33,6 +33,7 @@ spec:
 apiVersion: backstage.io/v1alpha1
 kind: Resource
 metadata:
+    name: daheardit-db
 spec:
   type: database
   owner: constructions
