--- a/model/resource/database.yaml
+++ b/model/resource/database.yaml
@@ -1,4 +1,4 @@
-apiVersion: backstage.io/v1alpha1
+system: dhr/dhrsystem: dhr/dhrapiVersion: backstage.io/v1alpha1
 kind: Resource
 metadata:
   name: database
