--- a/model/resource/database.yaml
+++ b/model/resource/database.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Resource
 metadata:
-  name: database
+  name: plesk
   namespace: dhr
 spec:
   type: database
