--- a/model/resource/storage.yaml
+++ b/model/resource/storage.yaml
@@ -6,6 +6,6 @@ metadata:
 spec:
   type: storage
   owner: default/ci
-  system: dhr/default
+  system: dhr/web
   dependencyOf:
     - component:dhr/symfony
