--- a/model/resource/mysql.yaml
+++ b/model/resource/mysql.yaml
@@ -1,11 +1,11 @@
 apiVersion: backstage.io/v1alpha1
 kind: Resource
 metadata:
-  name: database
+  name: mysql
   namespace: dhr
 spec:
   type: database
   owner: default/ci
-  system: dhr/default
+  system: dhr/web
   dependencyOf:
     - component:dhr/symfony
