--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -10,3 +10,4 @@ spec:
     - ./model/resource/mysql.yaml
     - ./model/resource/block.yaml
     - ./model/system/web.yaml
+  owner: default/constructions-incongrues.net
