--- a/model/resource/mysql.yaml
+++ b/model/resource/mysql.yaml
@@ -7,5 +7,6 @@ spec:
   type: database
   owner: default/ci
   system: dhr/web
+  owner: default/constructions-incongrues.net
   dependencyOf:
     - component:dhr/symfony
