--- a/model/resource/database.yaml
+++ b/model/resource/database.yaml
@@ -1,12 +1,12 @@
 apiVersion: backstage.io/v1alpha1
 kind: Resource
 metadata:
-  name: mysql
+  name: db
   namespace: dhr
-spec:
-  type: database
   tags:
     - mysql
+spec:
+  type: database
   system: dhr/web
   owner: default/constructions-incongrues.net
   dependencyOf:
