--- a/model/resource/disk.yaml
+++ b/model/resource/disk.yaml
@@ -12,3 +12,5 @@ spec:
   owner: default/constructions-incongrues.net
   dependencyOf:
     - component:dhr/symfony
+  dependsOn:
+    - component:plesk/server
