--- a/model/component/symfony.yaml
+++ b/model/component/symfony.yaml
@@ -10,3 +10,6 @@ spec:
   lifecycle: production
   system: dhr/web
   owner: default/constructions-incongrues-net
+  dependsOn:
+    - resource:plesk/disk
+    - resource:plesk/db
