--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,10 +4,9 @@ metadata:
   name: model
   namespace: dhr
 spec:
-  targets:
-    - ./model/api/rest.yaml
-    - ./model/component/symfony.yaml
-    - ./model/resource/database.yaml
-    - ./model/resource/disk.yaml
-    - ./model/system/web.yaml
   owner: default/constructions-incongrues-net
+  targets:
+    - model/api/rest.yaml
+    - model/component/symfony.yaml
+    - model/system/web.yaml
+  
