--- a/model/api/rest.yaml
+++ b/model/api/rest.yaml
@@ -17,3 +17,5 @@ spec:
       title: D!HR API
     servers:
       - url: https://data.constructions-incongrues.net/daheardit/
+  apiProvidedBy:
+    - component:ivresse/directus
