--- a/model/component/symfony.yaml
+++ b/model/component/symfony.yaml
@@ -11,4 +11,4 @@ spec:
   system: dhr/web
   owner: default/constructions-incongrues-net
   dependsOn:
-    - resource:plesk/server
+    - component:plesk/server
