--- a/model/component/symfony.yaml
+++ b/model/component/symfony.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   type: website
   lifecycle: production
-  system: dhr/web
+  system: dhr
   owner: default/constructions-incongrues-net
   dependsOn:
     - component:plesk/server
