--- a/model/system/dhr.yaml
+++ b/model/system/dhr.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: System
 metadata:
-  name: web
+  name: dhr
   namespace: dhr
 spec:
   owner: default/constructions-incongrues.net
