--- a/model/api/rest.yaml
+++ b/model/api/rest.yaml
@@ -7,6 +7,7 @@ spec:
   type: openapi
   owner: default/constructions-incongrues.net
   system: dhr
+  lifecycle: experimental
   apiProvidedBy:
     - component:ivresse/directus
   definition: |
