--- a/model/component/back.yaml
+++ b/model/component/back.yaml
@@ -12,4 +12,4 @@ spec:
   owner: default/constructions-incongrues-net
   dependsOn:
     - component:plesk/storage
-    - component:plesk/database
+    - component:plesk/databases
